--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
+    "nanoid": "^5.1.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
